--- a/gp_calculator.html
+++ b/gp_calculator.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doughnut GP% Calculator</title>
+    <title>Doughnut GP% Calculator (with VAT)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
         }
-        /* Custom styles for better visual appeal */
         .calculator-card {
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
             transition: all 0.3s ease-in-out;
@@ -35,6 +34,10 @@
             box-shadow: 0 0 0 2px rgba(251, 146, 60, 0.5); /* Orange-400 with opacity */
             outline: none;
         }
+        .display-field {
+            background-color: #f9fafb; /* Gray-50 */
+            border-color: #e5e7eb; /* Gray-200 */
+        }
         .result-display {
             background-color: #f3f4f6; /* Gray-100 */
         }
@@ -49,16 +52,20 @@
 <body class="bg-gradient-to-br from-orange-100 to-amber-200 min-h-screen flex items-center justify-center p-4">
 
     <div class="calculator-card bg-white p-6 sm:p-8 rounded-xl w-full max-w-md">
-        <h1 class="text-2xl sm:text-3xl font-bold text-center text-orange-600 mb-6 sm:mb-8">Doughnut GP% Calculator</h1>
+        <h1 class="text-2xl sm:text-3xl font-bold text-center text-orange-600 mb-6 sm:mb-8">Doughnut GP% Calculator (VAT)</h1>
 
         <div class="space-y-4 mb-6">
             <div>
-                <label for="costPrice" class="block text-sm font-medium text-gray-700 mb-1">Cost Price (per doughnut)</label>
-                <input type="number" id="costPrice" name="costPrice" placeholder="e.g., 0.50" class="input-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-orange-500 focus:border-orange-500 sm:text-sm">
+                <label for="costPriceExVAT" class="block text-sm font-medium text-gray-700 mb-1">Cost Price (per doughnut, ex. VAT)</label>
+                <input type="number" id="costPriceExVAT" name="costPriceExVAT" placeholder="e.g., 0.50" class="input-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-orange-500 focus:border-orange-500 sm:text-sm">
             </div>
             <div>
-                <label for="sellingPrice" class="block text-sm font-medium text-gray-700 mb-1">Selling Price (per doughnut)</label>
-                <input type="number" id="sellingPrice" name="sellingPrice" placeholder="e.g., 1.50" class="input-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-orange-500 focus:border-orange-500 sm:text-sm">
+                <label for="sellingPriceIncVAT" class="block text-sm font-medium text-gray-700 mb-1">Selling Price (per doughnut, inc. VAT 15%)</label>
+                <input type="number" id="sellingPriceIncVAT" name="sellingPriceIncVAT" placeholder="e.g., 1.73" class="input-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-orange-500 focus:border-orange-500 sm:text-sm">
+            </div>
+            <div>
+                <label for="sellingPriceExVATDisplay" class="block text-sm font-medium text-gray-700 mb-1">Selling Price (per doughnut, ex. VAT)</label>
+                <input type="text" id="sellingPriceExVATDisplay" name="sellingPriceExVATDisplay" readonly class="display-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm sm:text-sm text-gray-600" placeholder="Calculated automatically">
             </div>
         </div>
 
@@ -67,7 +74,7 @@
         </button>
 
         <div id="results" class="space-y-3 hidden">
-            <h2 class="text-xl font-semibold text-gray-800 border-b pb-2 mb-3">Results:</h2>
+            <h2 class="text-xl font-semibold text-gray-800 border-b pb-2 mb-3">Results (based on ex. VAT prices):</h2>
             <div class="result-display p-3 rounded-md">
                 <p class="text-sm text-gray-600">Gross Profit (GP):</p>
                 <p id="grossProfit" class="text-lg font-semibold text-gray-900"></p>
@@ -84,13 +91,30 @@
 
     <script>
         // Get references to DOM elements
-        const costPriceInput = document.getElementById('costPrice');
-        const sellingPriceInput = document.getElementById('sellingPrice');
+        const costPriceExVATInput = document.getElementById('costPriceExVAT');
+        const sellingPriceIncVATInput = document.getElementById('sellingPriceIncVAT');
+        const sellingPriceExVATDisplay = document.getElementById('sellingPriceExVATDisplay');
         const calculateBtn = document.getElementById('calculateBtn');
         const resultsDiv = document.getElementById('results');
         const grossProfitDisplay = document.getElementById('grossProfit');
         const grossProfitPercentageDisplay = document.getElementById('grossProfitPercentage');
         const messageArea = document.getElementById('messageArea');
+
+        const VAT_RATE = 0.15; // 15% VAT
+
+        // Function to calculate and display Selling Price ex. VAT dynamically
+        function updateSellingPriceExVAT() {
+            const sellingPriceIncVAT = parseFloat(sellingPriceIncVATInput.value);
+            if (!isNaN(sellingPriceIncVAT) && sellingPriceIncVAT >= 0) {
+                const sellingPriceExVAT = sellingPriceIncVAT / (1 + VAT_RATE);
+                sellingPriceExVATDisplay.value = sellingPriceExVAT.toFixed(4); // Display with more precision, actual calculation will use this
+            } else {
+                sellingPriceExVATDisplay.value = ''; // Clear if input is invalid
+            }
+        }
+
+        // Add event listener to the selling price (inc. VAT) input for dynamic update
+        sellingPriceIncVATInput.addEventListener('input', updateSellingPriceExVAT);
 
         // Add event listener to the calculate button
         calculateBtn.addEventListener('click', () => {
@@ -98,69 +122,72 @@
             messageArea.textContent = '';
             messageArea.className = 'mt-4 text-center text-sm'; // Reset classes
             resultsDiv.classList.add('hidden');
+            grossProfitDisplay.classList.remove('text-red-500', 'success-message');
+            grossProfitPercentageDisplay.classList.remove('text-red-500', 'success-message');
+
 
             // Get input values
-            const costPrice = parseFloat(costPriceInput.value);
-            const sellingPrice = parseFloat(sellingPriceInput.value);
+            const costPriceExVAT = parseFloat(costPriceExVATInput.value);
+            const sellingPriceIncVAT = parseFloat(sellingPriceIncVATInput.value);
 
             // --- Input Validation ---
-            if (isNaN(costPrice) || isNaN(sellingPrice)) {
+            if (isNaN(costPriceExVAT) || isNaN(sellingPriceIncVAT)) {
                 messageArea.textContent = 'Please enter valid numbers for both prices.';
                 messageArea.classList.add('error-message');
                 return;
             }
 
-            if (costPrice < 0 || sellingPrice < 0) {
+            if (costPriceExVAT < 0 || sellingPriceIncVAT < 0) {
                 messageArea.textContent = 'Prices cannot be negative.';
                 messageArea.classList.add('error-message');
                 return;
             }
 
-            if (sellingPrice === 0) {
-                 messageArea.textContent = 'Selling price cannot be zero for GP% calculation.';
+            // Calculate Selling Price ex. VAT for the calculation
+            const sellingPriceExVAT = sellingPriceIncVAT / (1 + VAT_RATE);
+
+            if (sellingPriceExVAT === 0) {
+                 messageArea.textContent = 'Selling price (ex. VAT) cannot be zero for GP% calculation.';
                  messageArea.classList.add('error-message');
+                 sellingPriceExVATDisplay.value = sellingPriceExVAT.toFixed(2); // Ensure display is updated if user directly clicks calculate
                  return;
             }
+             // Update display just in case it wasn't updated by 'input' event (e.g. autofill)
+            sellingPriceExVATDisplay.value = sellingPriceExVAT.toFixed(4);
 
-            // --- Calculation ---
-            const grossProfit = sellingPrice - costPrice;
-            // GP percentage calculation
-            // If sellingPrice is 0, GP% is undefined. If sellingPrice > 0, calculate normally.
-            const grossProfitPercentage = sellingPrice > 0 ? (grossProfit / sellingPrice) * 100 : 0;
+
+            // --- Calculation (using ex. VAT prices) ---
+            const grossProfit = sellingPriceExVAT - costPriceExVAT;
+            const grossProfitPercentage = sellingPriceExVAT > 0 ? (grossProfit / sellingPriceExVAT) * 100 : 0;
 
 
             // --- Display Results ---
-            // Format to 2 decimal places, common for currency
             grossProfitDisplay.textContent = grossProfit.toFixed(2);
             grossProfitPercentageDisplay.textContent = grossProfitPercentage.toFixed(2) + '%';
             resultsDiv.classList.remove('hidden');
 
             // --- Additional Messaging based on GP ---
             if (grossProfit < 0) {
-                messageArea.textContent = 'Note: You are selling at a loss.';
-                messageArea.classList.add('error-message'); // Use error styling for loss
+                messageArea.textContent = 'Note: You are selling at a loss (based on ex. VAT prices).';
+                messageArea.classList.add('error-message');
                 grossProfitDisplay.classList.add('text-red-500');
                 grossProfitPercentageDisplay.classList.add('text-red-500');
             } else if (grossProfit === 0) {
-                messageArea.textContent = 'Note: You are breaking even (no profit, no loss).';
-                messageArea.classList.add('text-blue-500'); // Neutral/info styling
-                grossProfitDisplay.classList.remove('text-red-500', 'success-message');
-                grossProfitPercentageDisplay.classList.remove('text-red-500', 'success-message');
+                messageArea.textContent = 'Note: You are breaking even (no profit, no loss - based on ex. VAT prices).';
+                messageArea.classList.add('text-blue-500');
             } else {
                 messageArea.textContent = 'Calculation successful!';
                 messageArea.classList.add('success-message');
-                grossProfitDisplay.classList.remove('text-red-500');
-                grossProfitPercentageDisplay.classList.remove('text-red-500');
                 grossProfitDisplay.classList.add('success-message');
                 grossProfitPercentageDisplay.classList.add('success-message');
             }
         });
 
         // Optional: Allow pressing Enter in input fields to trigger calculation
-        [costPriceInput, sellingPriceInput].forEach(input => {
+        [costPriceExVATInput, sellingPriceIncVATInput].forEach(input => {
             input.addEventListener('keypress', function(event) {
                 if (event.key === 'Enter') {
-                    event.preventDefault(); // Prevent form submission if it were in a form
+                    event.preventDefault();
                     calculateBtn.click();
                 }
             });
