--- a/gp_calculator.html
+++ b/gp_calculator.html
@@ -23,7 +23,7 @@
             transition: background-color 0.3s ease;
         }
         .btn-primary:hover {
-            background-color: #f97316; /* Orange-500 */
+            background-color: #cc112c; /* Orange-500 */
         }
         .input-field {
             border-color: #e5e7eb; /* Gray-200 */
@@ -64,7 +64,7 @@
                 <input type="number" id="sellingPriceIncVAT" name="sellingPriceIncVAT" placeholder="e.g., 1.73" class="input-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm focus:ring-orange-500 focus:border-orange-500 sm:text-sm">
             </div>
             <div>
-                <label for="sellingPriceExVATDisplay" class="block text-sm font-medium text-gray-700 mb-1">Selling Price Excl Vat(per doughnut)</label>
+                <label for="sellingPriceExVATDisplay" class="block text-sm font-medium text-gray-700 mb-1">Selling Price Excl Vat (per doughnut)</label>
                 <input type="text" id="sellingPriceExVATDisplay" name="sellingPriceExVATDisplay" readonly class="display-field mt-1 block w-full px-3 py-2 border rounded-md shadow-sm sm:text-sm text-gray-600" placeholder="Calculated automatically">
             </div>
         </div>
