--- a/gp_calculator.html
+++ b/gp_calculator.html
@@ -18,19 +18,19 @@
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
         .btn-primary {
-            background-color: #fb923c; /* Orange-400 */
+            background-color: #cc112c; /* Your desired button color */
             color: white;
             transition: background-color 0.3s ease;
         }
         .btn-primary:hover {
-            background-color: #cc112c; /* Orange-500 */
+            background-color: #b30f26; /* Slightly darker for hover - adjust if needed */
         }
         .input-field {
             border-color: #e5e7eb; /* Gray-200 */
             transition: border-color 0.3s ease, box-shadow 0.3s ease;
         }
         .input-field:focus {
-            border-color: #fb923c; /* Orange-400 */
+            border-color: #fb923c; /* Orange-400 - This is for the focus ring of inputs */
             box-shadow: 0 0 0 2px rgba(251, 146, 60, 0.5); /* Orange-400 with opacity */
             outline: none;
         }
